--- a/CPOA_TD1/.classpath
+++ b/CPOA_TD1/.classpath
@@ -6,7 +6,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/Utilisateurs/woillard2u.UL/git/mysql-connector-java-8.0.26/mysql-connector-java-8.0.26.jar">
+	<classpathentry kind="lib" path="C:/Users/Eric/Documents/IUT/2A/CPOA/mysql-connector-java-8.0.26/mysql-connector-java-8.0.26.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
