--- a/pom.xml
+++ b/pom.xml
@@ -118,7 +118,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>javafx.woillard_dipaolo_cpoa/javafx.HelloApplication
+                            <mainClass>javafx.woillard_dipaolo_cpoa/javafx.Application
                             </mainClass>
                         </configuration>
                     </execution>
